# DataStructures

./: CMakeLists.txt  DataStructures.sln
DataStructures/: DataStructures.vcxproj  DataStructures.vcxproj.filters  main.cpp
DataStructures/include/: Lista.h  Nodo.h  Servizio.h
DataStructures/include/Array/: Coda.h  Lista.h  Nodo.h  Pila.h
DataStructures/include/Grafi/: AlberoBin.h  Nodo.h
DataStructures/include/Hash/: Dizionario.h
DataStructures/src/: main.cpp
EserciziC++/: EserciziC++.vcxproj  main.cpp
include/: Array.h  Node.h  Nodo.h
include/Array/: Array.h  Coda.h  Pila.h
src/: CMakeLists.txt  main.cpp
